# beam-bvm-starter

./: README.md
.cargo/: config
app/: Cargo.toml
app/src/: lib.rs
common/: Cargo.toml
contract/: Cargo.toml
contract/src/: do_something.rs  lib.rs
