[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"] #must be cdylib

[dependencies]
#Make sure that the libraries are updated in all three sections
beam_bvm_interface = "7.1.13106"
beam_bvm_util = "7.1.1"
common = { path = "../common" }
